--- a/client/index.html
+++ b/client/index.html
@@ -8,30 +8,32 @@
 </head>
 <body>
     <div id="pseudo">
-        <p>Mon pseudo :</p>
-        <input type="text">
+        <p>Mon pseudo </p>
+        <input type="text" class="border-radius-5">
     </div>
     <div id="liste-messages">
             <div class="message">
-                <p class="content">message 1</p>
-                <span>sfdf</span><span class="vl"></span><span>il y a 20 ans</span>
+                <p class="content">Il fait plus souvent beau a perpi</p>
+                <span class="color-gray">Pinou</span><span class="vl"></span><span class="color-gray">il y a 20 min</span>
                 <hr>
             </div>
             <div class="message">
-                <p class="content">message 2</p>
-                <span>sfdf</span><span class="vl"></span><span>il y a 20 ans</span>
+                <p class="content">C'est clair</p>
+                <span class="color-gray">Broisin</span><span class="vl"></span><span class="color-gray">il y a 19 min</span>
                 <hr>
             </div>
             <div class="message">
-                <p class="content">message 3</p>
-                <span>sfdf</span><span class="vl"></span><span>il y a 20 ans</span>
+                <p class="content">Mais monsieur vous installez un malaise de taille conséquente la</p>
+                <span class="color-gray">Pinou</span><span class="vl"></span><span class="color-gray">il y a 15 min</span>
                 <hr>
             </div>
 
     </div>
     <div id="entree-message">
-        <input type="text" value="Envoyer un message">
-        <input type="button" value="Envoyer">
+        <form class="fed">
+            <input type="text" value="Envoyer un message" class="border-radius-5">
+            <input type="submit" value="Envoyer"  class="border-radius-5">
+        </form>
     </div>
 </body>
 </html>
