publication des messages

--- a/client/index.html
+++ b/client/index.html
@@ -26,29 +26,18 @@
                 <br />
                 <input type="text" id="pseudo-field" class="border-radius-5" />
             </div>
-            <div id="liste-messages">
+            <div id="message-list">
                 <div class="message">
                     <p class="content">Il fait plus souvent beau a perpi</p>
                     <span class="color-gray">Pinou</span><span class="vl"></span
                     ><span class="color-gray">il y a 20 min</span>
                     <hr />
                 </div>
-                <div class="message">
-                    <p class="content">C'est clair</p>
-                    <span class="color-gray">Broisin</span
-                    ><span class="vl"></span
-                    ><span class="color-gray">il y a 19 min</span>
-                    <hr />
-                </div>
-                <div class="message">
-                    <p class="content">
-                        Mais monsieur vous installez un malaise de taille
-                        conséquente la
-                    </p>
-                    <span class="color-gray">Pinou</span><span class="vl"></span
-                    ><span class="color-gray">il y a 15 min</span>
-                    <hr />
-                </div>
+                <p class="content">Il fait plus souvent beau a perpi</p>
+                <p class="content">Il fait plus souvent beau a perpi</p>
+                <p class="content">Il fait plus souvent beau a perpi</p>
+                <p class="content">Il fait plus souvent beau a perpi</p>
+                <p class="content">Il fait plus souvent beau a perpi</p>
             </div>
             <div id="entree-message">
                 <form class="fed" id="form-message">
