div de saisie reste en bas de l'ecran

--- a/client/index.html
+++ b/client/index.html
@@ -29,18 +29,66 @@
             <div id="message-list">
                 <div class="message">
                     <p class="content">Il fait plus souvent beau a perpi</p>
-                    <span class="color-gray">Pinou</span><span class="vl"></span
+                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
                     ><span class="color-gray">il y a 20 min</span>
                     <hr />
                 </div>
-                <p class="content">Il fait plus souvent beau a perpi</p>
-                <p class="content">Il fait plus souvent beau a perpi</p>
-                <p class="content">Il fait plus souvent beau a perpi</p>
-                <p class="content">Il fait plus souvent beau a perpi</p>
-                <p class="content">Il fait plus souvent beau a perpi</p>
-            </div>
-            <div id="entree-message">
-                <form class="fed" id="form-message">
+                <div class="message">
+                    <p class="content">Il fait plus souvent beau a perpi</p>
+                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
+                    ><span class="color-gray">il y a 20 min</span>
+                    <hr />
+                </div>
+                <div class="message">
+                    <p class="content">Il fait plus souvent beau a perpi</p>
+                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
+                    ><span class="color-gray">il y a 20 min</span>
+                    <hr />
+                </div>
+                <div class="message">
+                    <p class="content">Il fait plus souvent beau a perpi</p>
+                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
+                    ><span class="color-gray">il y a 20 min</span>
+                    <hr />
+                </div>
+                <div class="message">
+                    <p class="content">Il fait plus souvent beau a perpi</p>
+                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
+                    ><span class="color-gray">il y a 20 min</span>
+                    <hr />
+                </div>
+                <div class="message">
+                    <p class="content">Il fait plus souvent beau a perpi</p>
+                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
+                    ><span class="color-gray">il y a 20 min</span>
+                    <hr />
+                </div>
+                <div class="message">
+                    <p class="content">Il fait plus souvent beau a perpi</p>
+                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
+                    ><span class="color-gray">il y a 20 min</span>
+                    <hr />
+                </div>
+                <div class="message">
+                    <p class="content">Il fait plus souvent beau a perpi</p>
+                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
+                    ><span class="color-gray">il y a 20 min</span>
+                    <hr />
+                </div>
+                <div class="message">
+                    <p class="content">Il fait plus souvent beau a perpi</p>
+                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
+                    ><span class="color-gray">il y a 20 min</span>
+                    <hr />
+                </div>
+                <div class="message">
+                    <p class="content">Il fait plus souvent beau a perpi</p>
+                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
+                    ><span class="color-gray">il y a 20 min</span>
+                    <hr />
+                </div>
+            <div>
+                <form id="entree-message">
                     <input
                         type="text"
                         id="message-field"
@@ -49,7 +97,7 @@
                     <input
                         type="submit"
                         value="Envoyer"
-                        class="border-radius-5" />
+                        class="btn-border-radius-hover-scale" />
                 </form>
             </div>
         </div>
