--- a/client/index.html
+++ b/client/index.html
@@ -1,109 +1,125 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="stylesheet.css" />
-        <title>Harmony Messaging</title>
-    </head>
-    <script src="jquery-4.0.0.min.js"></script>
-    <script src="script.js"></script>
-    <body>
-        <div id="side-panel" style="display: none;">
-            <button onclick="close_panel()">Fermer</button>
-            <p> Liste des salons des fdp</p>
-        </div>
-        <div>
-            <div id="pseudo">
-                <button onclick="open_panel()">Salons</button>
-                <p>Mon pseudo</p>
-                <br />
-                <input type="text" id="pseudo-field" class="border-radius-5" />
-            </div>
-            <div id="message-list">
-                <div class="message">
-                    <p class="content">Il fait plus souvent beau a perpi</p>
-                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
-                    ><span class="color-gray">il y a 20 min</span>
-                    <hr />
-                </div>
-                <div class="message">
-                    <p class="content">Il fait plus souvent beau a perpi</p>
-                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
-                    ><span class="color-gray">il y a 20 min</span>
-                    <hr />
-                </div>
-                <div class="message">
-                    <p class="content">Il fait plus souvent beau a perpi</p>
-                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
-                    ><span class="color-gray">il y a 20 min</span>
-                    <hr />
-                </div>
-                <div class="message">
-                    <p class="content">Il fait plus souvent beau a perpi</p>
-                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
-                    ><span class="color-gray">il y a 20 min</span>
-                    <hr />
-                </div>
-                <div class="message">
-                    <p class="content">Il fait plus souvent beau a perpi</p>
-                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
-                    ><span class="color-gray">il y a 20 min</span>
-                    <hr />
-                </div>
-                <div class="message">
-                    <p class="content">Il fait plus souvent beau a perpi</p>
-                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
-                    ><span class="color-gray">il y a 20 min</span>
-                    <hr />
-                </div>
-                <div class="message">
-                    <p class="content">Il fait plus souvent beau a perpi</p>
-                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
-                    ><span class="color-gray">il y a 20 min</span>
-                    <hr />
-                </div>
-                <div class="message">
-                    <p class="content">Il fait plus souvent beau a perpi</p>
-                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
-                    ><span class="color-gray">il y a 20 min</span>
-                    <hr />
-                </div>
-                <div class="message">
-                    <p class="content">Il fait plus souvent beau a perpi</p>
-                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
-                    ><span class="color-gray">il y a 20 min</span>
-                    <hr />
-                </div>
-                <div class="message">
-                    <p class="content">Il fait plus souvent beau a perpi</p>
-                    <span class="color-gray">Pinou</span><span class="vertical-line"></span
-                    ><span class="color-gray">il y a 20 min</span>
-                    <hr />
-                </div>
-            <div>
-                <form id="entree-message">
-                    <input
-                        type="text"
-                        id="message-field"
-                        value="Envoyer un message"
-                        class="border-radius-5"
-                        autocomplete="off" />
-                    <input
-                        type="submit"
-                        value="Envoyer"
-                        class="btn-border-radius-hover-scale" />
-                </form>
-            </div>
-        </div>
-        <script>
-            function open_panel() {
-                document.getElementById("side-panel").style.display = "flex";
-            }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="stylesheet.css" />
+    <title>Harmony Messaging</title>
+  </head>
 
-            function close_panel() {
-                document.getElementById("side-panel").style.display = "none";
-            }
-        </script>
-    </body>
+  <body>
+    <!-- SIDE PANEL (salons) -->
+    <header id="side-panel" style="display: none">
+      <button onclick="close_panel()">Fermer</button>
+      <p>Liste des salons</p>
+    </header>
+
+    <!-- CONTENU PRINCIPAL -->
+    <div id="main-container">
+      <!-- HEADER TOP (pseudo + bouton) -->
+      <div id="pseudo">
+        <button onclick="open_panel()">Salons</button>
+        <p>Mon pseudo</p>
+        <input type="text" id="pseudo-field" class="border-radius-5" />
+      </div>
+
+      <!-- LISTE DES MESSAGES -->
+      <div id="message-list">
+        <div class="message">
+          <hr />
+          <p class="content">Il fait plus souvent beau à Perpi</p>
+          <span class="color-gray">Pinou</span>
+          <span class="vertical-line"></span>
+          <span class="color-gray">il y a 20 min</span>
+        </div>
+
+        <div class="message">
+          <hr />
+          <p class="content">Encore un message test</p>
+          <span class="color-gray">Pinou</span>
+          <span class="vertical-line"></span>
+          <span class="color-gray">il y a 18 min</span>
+        </div>
+        <div class="message">
+          <hr />
+          <p class="content">Encore un message test</p>
+          <span class="color-gray">Pinou</span>
+          <span class="vertical-line"></span>
+          <span class="color-gray">il y a 18 min</span>
+        </div>
+        <div class="message">
+          <hr />
+          <p class="content">Encore un message test</p>
+          <span class="color-gray">Pinou</span>
+          <span class="vertical-line"></span>
+          <span class="color-gray">il y a 18 min</span>
+        </div>
+        <div class="message">
+          <hr />
+          <p class="content">Encore un message test</p>
+          <span class="color-gray">Pinou</span>
+          <span class="vertical-line"></span>
+          <span class="color-gray">il y a 18 min</span>
+        </div>
+        <div class="message">
+          <hr />
+          <p class="content">Encore un message test</p>
+          <span class="color-gray">Pinou</span>
+          <span class="vertical-line"></span>
+          <span class="color-gray">il y a 18 min</span>
+        </div>
+        <div class="message">
+          <hr />
+          <p class="content">Encore un message test</p>
+          <span class="color-gray">Pinou</span>
+          <span class="vertical-line"></span>
+          <span class="color-gray">il y a 18 min</span>
+        </div>
+        <div class="message">
+          <hr />
+          <p class="content">Encore un message test</p>
+          <span class="color-gray">Pinou</span>
+          <span class="vertical-line"></span>
+          <span class="color-gray">il y a 18 min</span>
+        </div>
+        <div class="message">
+          <hr />
+          <p class="content">Encore un message test</p>
+          <span class="color-gray">Pinou</span>
+          <span class="vertical-line"></span>
+          <span class="color-gray">il y a 18 min</span>
+        </div>
+        
+      </div>
+
+      <!-- BARRE D'ENVOI -->
+      <div>
+        <form id="entree-message">
+          <input
+            type="text"
+            id="message-field"
+            value="Envoyer un message"
+            class="border-radius-5"
+            autocomplete="off"
+          />
+
+          <input
+            type="submit"
+            value="Envoyer"
+            class="btn-border-radius-hover-scale"
+          />
+        </form>
+      </div>
+    </div>
+
+    <script>
+      function open_panel() {
+        document.getElementById("side-panel").style.display = "flex";
+      }
+
+      function close_panel() {
+        document.getElementById("side-panel").style.display = "none";
+      }
+    </script>
+  </body>
 </html>
