visualisation des messages en temps réel

--- a/client/index.html
+++ b/client/index.html
@@ -13,24 +13,17 @@
             <!-- Sidebar -->
             <aside class="sidebar">
                 <header class="sidebar-header">
-                    <div class="profile">
-                        <!-- <div class="name">Mon pseudo</div> -->
+                    <div class="speudo">
                         <input id="pseudo-field" type="text" />
                     </div>
                     <button class="new-chat">Nouveau</button>
                 </header>
 
-                <div class="search">
-                    <input
-                        type="search"
-                        placeholder="Rechercher ou démarrer une nouvelle conversation" />
-                </div>
-
                 <ul class="chat-list">
                     <li class="chat active">
                         <div class="chat-body">
                             <div class="chat-top">
-                                <span class="chat-name">Pinou</span>
+                                <span class="chat-name">Room 1</span>
                                 <span class="chat-time">20:10</span>
                             </div>
                             <div class="chat-last">
@@ -62,6 +55,7 @@
                         <div class="bubble">
                             Il fait plus souvent beau à Perpi
                             <div class="meta">Pinou • 20:10</div>
+                            <input type="hidden" class="message-id" value="0" />
                         </div>
                     </div>
 
