--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,10 @@
             <aside class="sidebar">
                 <header class="sidebar-header">
                     <div class="speudo">
-                        <input id="pseudo-field" type="text" />
+                        <input
+                            id="pseudo-field"
+                            type="text"
+                            placeholder="Renseignez un speudo" />
                     </div>
                     <button class="new-chat">Nouveau</button>
                 </header>
